[gd_scene load_steps=5 format=3 uid="uid://devfxw7imva0n"]

[ext_resource type="PackedScene" uid="uid://cl87kis337ax3" path="res://scenes/card_placement.tscn" id="1_0ymd0"]
[ext_resource type="Script" path="res://scripts/board.gd" id="1_oyplq"]
[ext_resource type="Script" path="res://scripts/card_container.gd" id="1_p7t0p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_12pb7"]
bg_color = Color(0, 0.337255, 0.0470588, 0.439216)

[node name="Board" type="Node2D"]
script = ExtResource("1_oyplq")

[node name="CardHolder" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CardContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.51
anchor_top = 1.0
anchor_right = 0.51
anchor_bottom = 1.0
offset_left = -363.52
offset_top = -99.0
offset_right = 376.48
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = -45
alignment = 1
script = ExtResource("1_p7t0p")

[node name="Panel" type="Panel" parent="CanvasLayer"]
z_index = -10
z_as_relative = false
offset_left = 225.0
offset_top = 243.0
offset_right = 927.0
offset_bottom = 405.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_12pb7")

[node name="CardPlacement" parent="CanvasLayer" instance=ExtResource("1_0ymd0")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -351.0
offset_top = -81.0
offset_right = 351.0
offset_bottom = 81.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="DealButton" type="Button" parent="CanvasLayer"]
offset_left = 46.0
offset_top = 547.0
offset_right = 172.0
offset_bottom = 599.0
text = "DAR CARTAS"

[node name="AddPlayer" type="Button" parent="CanvasLayer"]
offset_left = 47.0
offset_top = 483.0
offset_right = 173.0
offset_bottom = 535.0
text = "ADD JUGADOR"

[node name="PlayersContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.073
anchor_right = 0.5
anchor_bottom = 0.073
offset_left = -482.0
offset_top = -47.304
offset_right = 481.0
offset_bottom = 58.696
grow_horizontal = 2
theme_override_constants/separation = 100
alignment = 1

[connection signal="mouse_entered" from="CanvasLayer/CardContainer" to="CanvasLayer/CardContainer" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/CardContainer" to="CanvasLayer/CardContainer" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/DealButton" to="." method="_on_deal_button_pressed"]
[connection signal="pressed" from="CanvasLayer/AddPlayer" to="." method="_on_add_player_pressed"]
